variables.Variables.scala.code
var stepAmount=0;
while (isOverBaggle==false) {
  forward();
  stepAmount= stepAmount + 1;
}
pickUpBaggle();
var c=0;
while (c!=stepAmount) {
  backward();
  c= c+1;
}
